<resources>
    <string name="app_name">JetpackApplication</string>
    <string name="user_name">用户名</string>
    <string name="please_enter_name">请输入用户名</string>
    <string name="user_age">年龄</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="user_height">身高</string>
    <string name="please_enter_height">请输入身高</string>
    <string name="insert">insert</string>
    <string name="query">query</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="room_text">room_text</string>
    <string name="do_get">get请求</string>
    <string name="do_post">post请求</string>
    <string name="login_state">此处显示登录状态</string>
    <string name="login">登录</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
</resources>