<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.zxg.jetpack.application.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/act_user_name_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/act_user_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/user_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/act_user_name_text"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:hint="@string/please_enter_name"
                android:text="@{user.name}"
                app:layout_constraintStart_toEndOf="@+id/act_user_name"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/act_user_age_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/act_user_name_cl"
            app:layout_goneMarginTop="10dp">

            <TextView
                android:id="@+id/act_user_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/user_age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/act_user_password_text"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:hint="@string/please_enter_password"
                android:text="@{String.valueOf(user.age)}"
                app:layout_constraintStart_toEndOf="@+id/act_user_password"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/act_user_height_cl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/act_user_age_cl">

            <TextView
                android:id="@+id/act_user_height"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/user_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/act_user_height_text"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:hint="@string/please_enter_height"
                android:text="@{String.valueOf(user.height)}"
                app:layout_constraintStart_toEndOf="@+id/act_user_height"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/room_cl"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            app:layout_constraintTop_toBottomOf="@+id/act_user_height_cl">

            <Button
                android:id="@+id/room_insert"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/insert"
                android:textColor="#F00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/room_delete"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/delete"
                android:textColor="#F00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/room_insert" />

            <Button
                android:id="@+id/room_update"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/update"
                android:textColor="#F00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/room_delete" />

            <Button
                android:id="@+id/room_query"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/query"
                android:textColor="#F00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/room_update" />

            <Button
                android:id="@+id/room_text"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/room_text"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/room_query" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_cl">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/okhttp_get"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/do_get"
                android:textColor="#F00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:id="@+id/okhttp_post"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/do_post"
                android:textColor="#F00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/okhttp_get"
                />

            <TextView
                android:id="@+id/okhttp_result"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/okhttp_get" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>