<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="click"
            type="com.zxg.jetpack.application.mvvmtest.OnClick" />

        <variable
            name="loginVm"
            type="com.zxg.jetpack.application.mvvmtest.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvvmtest.LoginActivity">

        <TextView
            android:id="@+id/login_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/login_state"
            android:text="@{loginVm.loginState}"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_name_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/login_state">

            <ImageView
                android:id="@+id/login_name_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:scaleType="fitXY"
                android:src="@drawable/user_name_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/login_user_name_edit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/user_name_hint"
                android:inputType="text"
                android:text="@{loginVm.userName}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/login_name_icon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_password_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/login_name_cl">

            <ImageView
                android:id="@+id/login_password_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:scaleType="fitXY"
                android:src="@drawable/pass_word_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/login_password_edit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@{loginVm.password}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/login_password_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/login_password_show"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:scaleType="fitXY"
                android:onClick="@{() -> click.isShowPassword()}"
                android:src="@{loginVm.isShowPassword ? @drawable/pass_word_show : @drawable/pass_word_not_show}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/login_password_edit"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_login_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_password_cl">

            <TextView
                android:id="@+id/login_login_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_background_select"
                android:clickable="true"
                android:gravity="center"
                android:onClick="@{() -> click.onLogin()}"
                android:paddingVertical="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
